tests/algorithms/x/Kotlin/data_structures/queues/priority_queue_using_list.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/queues/priority_queue_using_list.kt:21:40: error: type mismatch: inferred type is MutableList<Any?> but MutableList<MutableList<Int>> was expected
    return FixedPriorityQueue(queues = mutableListOf<Any?>(mutableListOf<Any?>() as Any?, mutableListOf<Any?>() as Any?, mutableListOf<Any?>() as Any?))
                                       ^
